--- a/Benchmarking Normalization Methods/benchmarking_normalization.html
+++ b/Benchmarking Normalization Methods/benchmarking_normalization.html
@@ -14581,7 +14581,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
   <nav class="border navbar navbar-expand-md navbar-light">
     <div class="container-fluid" id="nav-text">
         <img alt="logo" src="../website/logo.png" style="height: 2rem;">
-        <a class="navbar-brand" href="../index.html" style="color: #ffffff">Dexamethasone Benchmark</a>
+        <a class="navbar-brand" href="../index.html" style="color: #ffffff">Dexamethasone Benchmarking Resource</a>
         <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -14603,7 +14603,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="Benchmarking-Data-Normalization-Methods-with-the-Dexamethasone-Benchmark">Benchmarking Data Normalization Methods with the Dexamethasone Benchmark<a class="anchor-link" href="#Benchmarking-Data-Normalization-Methods-with-the-Dexamethasone-Benchmark">&#182;</a></h1><p>This notebook reads in designated meta data and RNA-seq expression data files from a dexamethasone study and performs four normalization methods - counts per million (CPM), log transformation, z-score normalization, and quantile normalization - on the data.</p>
+<h1 id="Benchmarking-Data-Normalization-Methods-with-the-Dexamethasone-Benchmark">Benchmarking Data Normalization Methods with the Dexamethasone Benchmarking Resource<a class="anchor-link" href="#Benchmarking-Data-Normalization-Methods-with-the-Dexamethasone-Benchmark">&#182;</a></h1><p>This notebook reads in designated meta data and RNA-seq expression data files from a dexamethasone study and performs four normalization methods - counts per million (CPM), log transformation, z-score normalization, and quantile normalization - on the data.</p>
 <p>The results of the DEG methods are benchmarked after differential gene and enrichment analysis focused on the NR3C1 transcription factor, the known target of dexamethasone.</p>
 <p>The code for characteristic direction and some normalization methods are adapted from Bulk RNA-seq Analysis pipeline appyter: <a href="https://appyters.maayanlab.cloud/Bulk_RNA_seq/">https://appyters.maayanlab.cloud/Bulk_RNA_seq/</a></p>
 
