--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="border navbar navbar-expand-md navbar-light">
             <div class="container-fluid" id="nav-text">
                 <img alt="logo" src="website/logo.png" style="height: 3.5rem;">
-                <a class="navbar-brand" href="#" style="color: #ffffff">Dexamethasone Benchmark</a>
+                <a class="navbar-brand" href="#" style="color: #ffffff">Dexamethasone Benchmarking Resource</a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -30,7 +30,7 @@
         </nav>
         <main class="py-4">
             <h2 class="text-center">
-                The Dexamethasone Benchmark: Datasets and Code to Evaluate the Quality of Methods for Processing Omics Data
+                The Dexamethasone Benchmarking Resource: Datasets and Code to Evaluate the Quality of Methods for Processing Transcriptomics Data
             </h2>
             <img alt="graphical abstract" src="website/graphical_abstract.png" width="65%" class = "center">
             <div class="row">
@@ -62,10 +62,7 @@
                     </p>
                     <ul>
                         <li>
-                            <a href="https://docs.google.com/spreadsheets/d/12EHecge-pXMBdBkbi9WUEiMVlXcAwKelacoUEB42Plk/edit?usp=sharing" target="_blank">Gene Sets from Pubmed Studies</a> (Google Sheets)
-                        </li>
-                        <li>
-                            <a href="https://docs.google.com/spreadsheets/d/1NoENbcKwrlu5_99qctkg9wsGOJgbC4PichXqfe6qYeA/edit?usp=sharing" target="_blank">Gene Sets from ENCODE, ReMap, ChEA</a> (Google Sheets)
+                            <a href="https://docs.google.com/spreadsheets/d/12EHecge-pXMBdBkbi9WUEiMVlXcAwKelacoUEB42Plk/edit?usp=sharing" target="_blank">Gene Sets from ChEA and ENCODE</a> (Google Sheets)
                         </li>
                         <li>
                             <a href="https://docs.google.com/spreadsheets/d/1YnM1ov-5oCb_vtcBehKA7WNklAJ269duIJQ7JLD0tUE/edit?usp=sharing" target="_blank">Entries from GEO</a> (Google Sheets)
@@ -127,20 +124,12 @@
                     <div class="col-md-2 col-sm">
                         <div class="row my-2">
                             <a class="badge badge-secondary px-2" href="https://github.com/MaayanLab/dex-benchmark" target="_blank">
-                                <span class="badge badge-light">
-                                    <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
-                                         style="width: 1rem;">
-                        </span>
                                 View source code
                             </a>
                         </div>
                         <div class="row my-2">
                             <a class="badge badge-secondary px-2"
                                href="https://github.com/MaayanLab/dex-benchmark/issues/new" target="_blank">
-                                <span class="badge badge-light">
-                                <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
-                                     style="width: 1rem;">
-                                </span>
                                 Submit an issue
                             </a>
                         </div>
