--- a/website/GEN3VA.html
+++ b/website/GEN3VA.html
@@ -16,7 +16,7 @@
         <nav class="border navbar navbar-expand-md navbar-light">
             <div class="container-fluid" id="nav-text">
                 <img alt="logo" src="logo.png" style="height: 3.5rem;">
-                <a class="navbar-brand" href="../index.html" style="color: #ffffff">Dexamethasone Benchmark</a>
+                <a class="navbar-brand" href="../index.html" style="color: #ffffff">Dexamethasone Benchmarking Resource</a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -414,20 +414,12 @@
                     <div class="col-md-2 col-sm">
                         <div class="row my-2">
                             <a class="badge badge-secondary px-2" href="https://github.com/MaayanLab/dex-benchmark" target="_blank">
-                                <span class="badge badge-light">
-                                    <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
-                                         style="width: 1rem;">
-                        </span>
                                 View source code
                             </a>
                         </div>
                         <div class="row my-2">
                             <a class="badge badge-secondary px-2"
                                href="https://github.com/MaayanLab/dex-benchmark/issues/new" target="_blank">
-                                <span class="badge badge-light">
-                                <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
-                                     style="width: 1rem;">
-                                    </span>
                                 Submit an issue
                             </a>
                         </div>
