Added Normalization Workflow

--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
                             <a>Benchmarking Alignment Methods</a>
                         </li>
                         <li>
-                            <a href="Benchmarking Normalization Methods/benchmarking_normalization.html">Benchmarking Data Normalization Methods</a>
+                            <a href="Benchmarking Normalization Methods/benchmarking_normalization.html">Benchmarking Data Normalization Methods (CD Version)</a>
+                        </li>
+                        <li>
+                            <a href="Benchmarking Normalization Methods/benchmarking_normalization_v2.html">Benchmarking Data Normalization Methods (Limma Version)</a>
                         </li>
                         <li>
                             <a>Benchmarking Clustering Methods</a>
