--- a/index.html
+++ b/index.html
@@ -93,16 +93,16 @@
                             <a>Benchmarking Alignment Methods</a>
                         </li>
                         <li>
-                            <a href="Benchmarking Normalization Methods/benchmarking_normalization.html">Benchmarking Data Normalization Methods (CD Version)</a>
+                            <a href="Benchmarking_Normalization_Methods/benchmarking_normalization.html">Benchmarking Data Normalization Methods (CD Version)</a>
                         </li>
                         <li>
-                            <a href="Benchmarking Normalization Methods/benchmarking_normalization_v2.html">Benchmarking Data Normalization Methods (Limma Version)</a>
+                            <a href="Benchmarking_Normalization_Methods/benchmarking_normalization_v2.html">Benchmarking Data Normalization Methods (Limma Version)</a>
                         </li>
                         <li>
                             <a>Benchmarking Clustering Methods</a>
                         </li>
                         <li>
-                            <a href="Benchmarking RNA-seq DEG Methods/Benchmarking RNA-seq DEG Methods with the Dexamethasone Benchmark.html">Benchmarking RNA-seq DEG Methods</a>
+                            <a href="Benchmarking_RNA-seq_DEG_Methods/benchmarking_RNAseq_DEGs.html">Benchmarking RNA-seq DEG Methods</a>
                         </li>
                         <li>
                             <a>Benchmarking Enrichment Analysis Methods</a>
