--- a/Benchmarking_Normalization_Methods/benchmarking_normalization.html
+++ b/Benchmarking_Normalization_Methods/benchmarking_normalization.html
@@ -14608,7 +14608,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h1 id="Benchmarking-Data-Normalization-Methods-with-the-Dexamethasone-Benchmarking-Resource-(Characteristic-Direction-Version)">Benchmarking Data Normalization Methods with the Dexamethasone Benchmarking Resource (Characteristic Direction Version)<a class="anchor-link" href="#Benchmarking-Data-Normalization-Methods-with-the-Dexamethasone-Benchmarking-Resource-(Characteristic-Direction-Version)">&#182;</a></h1><p>This notebook reads in designated meta data and RNA-seq expression data files from a dexamethasone study and performs four normalization methods - counts per million (CPM), log transformation, z-score normalization, and quantile normalization - on the data.</p>
 <p>After differential gene analysis and enrichment analysis, the normalization methods are compared based on the NR3C1 transcription factor, a known target of dexamethasone.</p>
-<p>The code for limma and some normalization methods are adapted from the Bulk RNA-seq Analysis pipeline appyter: <a href="https://appyters.maayanlab.cloud/Bulk_RNA_seq/">https://appyters.maayanlab.cloud/Bulk_RNA_seq/</a></p>
+<p>The code for characteristic direction and some normalization methods are adapted from the Bulk RNA-seq Analysis pipeline appyter: <a href="https://appyters.maayanlab.cloud/Bulk_RNA_seq/">https://appyters.maayanlab.cloud/Bulk_RNA_seq/</a></p>
 
 </div>
 </div>
