--- a/website/GEN3VA.html
+++ b/website/GEN3VA.html
@@ -403,16 +403,16 @@
                 <div class="row justify-content-center">
                     <div class="col-md-2 col-sm text-center">
                         <a href="https://icahn.mssm.edu/research/bioinformatics" target="_blank">
-                            <img class="rounded" src="icahn_cb.png" style="height: 5rem;">
+                            <img class="rounded" src="icahn_cb.png" style="height: 6rem;">
                         </a>
                     </div>
                     <div class="col-md-2 col-sm text-center">
                         <a href="https://labs.icahn.mssm.edu/maayanlab/" target="_blank">
-                            <img class="rounded" src="maayanlab_logo.png" style="height: 5rem;">
+                            <img class="rounded" src="maayanlab_logo.png" style="height: 6rem;">
                         </a>
                     </div>
                     <div class="col-md-2 col-sm">
-                        <div class="row my-2">
+                        <div class="row my-2" style="padding-top:1rem">
                             <a class="badge badge-secondary px-2" href="https://github.com/MaayanLab/dex-benchmark" target="_blank">
                                 View source code
                             </a>
