--- a/website/about.html
+++ b/website/about.html
@@ -47,10 +47,10 @@
             Gene expression and transcription factor binding data for the drug dexamethasone and its known target, the Glucocorticoid Receptor (GR) (NR3C1), are provided on the <a href="../index.html">landing page</a> along with code that demonstrates how to perform benchmarks for comparing gene expression analysis steps, such as alignment, data normalization, unsupervised cluster identification, differential expression analysis, and enrichment analysis. 
             The sources for the curated datasets include <a href="https://maayanlab.cloud/sigcom-lincs/#/" target="_blank">SigCom LINCS</a><sup>1</sup>, 
             <a href="https://www.encodeproject.org/" target="_blank">ENCODE</a><sup>2,3</sup>, and the 
-            Gene Expression Omnibus (<a href="https://www.ncbi.nlm.nih.gov/geo/" target="_blank">GEO</a>) with processed data from 
-            <a href="https://maayanlab.cloud/CREEDS/" target="_blank">CREEDS</a><sup>4</sup>, 
-            <a href="https://maayanlab.cloud/gen3va/" target="_blank">GEN3VA</a><sup>5</sup>, and
-            <a href="https://maayanlab.cloud/chea3/" target="_blank">ChEA</a><sup>6</sup>.
+            Gene Expression Omnibus<sup>4</sup> (<a href="https://www.ncbi.nlm.nih.gov/geo/" target="_blank">GEO</a>) with processed data from 
+            <a href="https://maayanlab.cloud/CREEDS/" target="_blank">CREEDS</a><sup>5</sup>, 
+            <a href="https://maayanlab.cloud/gen3va/" target="_blank">GEN3VA</a><sup>6</sup>, and
+            <a href="https://maayanlab.cloud/chea3/" target="_blank">ChEA</a><sup>7</sup>.
             Some of the provided data is used for the template workflows that compare state-of-the-art algorithms currently used by the community to perform transcriptomics analyses. 
             Users can also benchmark additional methods by customizing the Jupyter Notebooks for their own needs. Overall, the Dexamethasone Benchmarking Resource provides a step forward toward improving the quality of bioinformatics workflow for the betterment of knowledge extraction from omics datasets.
         </p>
@@ -59,10 +59,13 @@
             <p>[1] Evangelista JE, Clarke DJB, Xie Z, Lachmann A, Jeon M, Chen K, Jagodnik KM, Jenkins SL, Kuleshov MV, Wojciechowicz ML, Schürer SC, Medvedovic M, Ma’ayan A. SigCom LINCS: data and metadata search engine for a million gene expression signatures. Nucleic Acids Research, 2022; gkac328, https://doi.org/10.1093/nar/gkac328</p>
             <p>[2] ENCODE Project Consortium. An integrated encyclopedia of DNA elements in the human genome. Nature. 2012 Sep 6;489(7414):57-74. doi: 10.1038/nature11247. PMID: 22955616; PMCID: PMC3439153.</p>
             <p>[3] Luo Y, Hitz BC, Gabdank I, Hilton JA, Kagda MS, Lam B, Myers Z, Sud P, Jou J, Lin K, Baymuradov UK, Graham K, Litton C, Miyasato SR, Strattan JS, Jolanki O, Lee JW, Tanaka FY, Adenekan P, O'Neill E, Cherry JM. New developments on the Encyclopedia of DNA Elements (ENCODE) data portal. Nucleic Acids Res. 2020 Jan 8;48(D1):D882-D889. doi: 10.1093/nar/gkz1062. PMID: 31713622; PMCID: PMC7061942.</p>
-            <p>[4] Keenan AB, Torre D, Lachmann A, Leong AK, Wojciechowicz M, Utti V, Jagodnik K, Kropiwnicki E, Wang Z, Ma'ayan A (2019) ChEA3: transcription factor enrichment analysis by orthogonal omics integration. Nucleic Acids Research.
+            <p>[4] Barrett T, Wilhite SE, Ledoux P, Evangelista C, Kim IF, Tomashevsky M, Marshall KA, Phillippy KH, Sherman PM, Holko M, Yefanov A, Lee H, Zhang N, Robertson CL, Serova N, Davis S, Soboleva A.
+                NCBI GEO: archive for functional genomics data sets--update.
+                Nucleic Acids Res. 2013 Jan;41(Database issue):D991-5.</p>
+            <p>[5] Keenan AB, Torre D, Lachmann A, Leong AK, Wojciechowicz M, Utti V, Jagodnik K, Kropiwnicki E, Wang Z, Ma'ayan A (2019) ChEA3: transcription factor enrichment analysis by orthogonal omics integration. Nucleic Acids Research.
                 doi: 10.1093/nar/gkz446</p>
-            <p>[5] Wang, Z., Monteiro, C. D., Jagodnik, K. M., Fernandez, N. F., Gundersen, G. W., ... & Ma'ayan, A. (2016) Extraction and Analysis of Signatures from the Gene Expression Omnibus by the Crowd. Nature Communications doi: 10.1038/ncomms12846</p>
-            <p>[6] Gundersen GW, Jagodnik KM, Woodland H, Fernandez NF, Sani K, Dohlman AB, Ung PM, Monteiro CD, Schlessinger A, Ma'ayan A. GEN3VA: aggregation and analysis of gene expression signatures from related studies. BMC Bioinformatics. 2016 Nov 15;17(1):461. doi: 10.1186/s12859-016-1321-1. PMID: 27846806; PMCID: PMC5111283.</p>
+            <p>[6] Wang, Z., Monteiro, C. D., Jagodnik, K. M., Fernandez, N. F., Gundersen, G. W., ... & Ma'ayan, A. (2016) Extraction and Analysis of Signatures from the Gene Expression Omnibus by the Crowd. Nature Communications doi: 10.1038/ncomms12846</p>
+            <p>[7] Gundersen GW, Jagodnik KM, Woodland H, Fernandez NF, Sani K, Dohlman AB, Ung PM, Monteiro CD, Schlessinger A, Ma'ayan A. GEN3VA: aggregation and analysis of gene expression signatures from related studies. BMC Bioinformatics. 2016 Nov 15;17(1):461. doi: 10.1186/s12859-016-1321-1. PMID: 27846806; PMCID: PMC5111283.</p>
         </div>
     </main>
     <footer class="footer">
@@ -70,16 +73,16 @@
             <div class="row justify-content-center">
                 <div class="col-md-2 col-sm text-center">
                     <a href="https://icahn.mssm.edu/research/bioinformatics" target="_blank">
-                        <img class="rounded" src="icahn_cb.png" style="height: 5rem;">
+                        <img class="rounded" src="icahn_cb.png" style="height: 6rem;">
                     </a>
                 </div>
                 <div class="col-md-2 col-sm text-center">
                     <a href="https://labs.icahn.mssm.edu/maayanlab/" target="_blank">
-                        <img class="rounded" src="maayanlab_logo.png" style="height: 5rem;">
+                        <img class="rounded" src="maayanlab_logo.png" style="height: 6rem;">
                     </a>
                 </div>
                 <div class="col-md-2 col-sm">
-                    <div class="row my-2">
+                    <div class="row my-2"  style="padding-top:1rem">
                         <a class="badge badge-secondary px-2" href="https://github.com/MaayanLab/dex-benchmark" target="_blank">
                             View source code
                         </a>
