--- a/website/stats.html
+++ b/website/stats.html
@@ -49,7 +49,7 @@
                 </tr>
                 <tr>
                     <td>Computed Signatures</td>
-                    <td class="text-end">675</td>
+                    <td class="text-end">695</td>
                 </tr>
                 <tr>
                     <td>Organisms</td>
@@ -76,16 +76,16 @@
                 <div class="row justify-content-center">
                     <div class="col-md-2 col-sm text-center">
                         <a href="https://icahn.mssm.edu/research/bioinformatics" target="_blank">
-                            <img class="rounded" src="icahn_cb.png" style="height: 5rem;">
+                            <img class="rounded" src="icahn_cb.png" style="height: 6rem;">
                         </a>
                     </div>
                     <div class="col-md-2 col-sm text-center">
                         <a href="https://labs.icahn.mssm.edu/maayanlab/" target="_blank">
-                            <img class="rounded" src="maayanlab_logo.png" style="height: 5rem;">
+                            <img class="rounded" src="maayanlab_logo.png" style="height: 6rem;">
                         </a>
                     </div>
                     <div class="col-md-2 col-sm">
-                        <div class="row my-2">
+                        <div class="row my-2"  style="padding-top:1rem">
                             <a class="badge badge-secondary px-2" href="https://github.com/MaayanLab/dex-benchmark" target="_blank">
                                 View source code
                             </a>
