update index page and figures

--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
         </nav>
         <main class="py-4">
             <h2 class="text-center">
-                The Dexamethasone Benchmarking Resource: Datasets and Code to Evaluate the Quality of Methods for Processing Transcriptomics Data
+                The Dexamethasone Benchmarking Resource
             </h2>
-            <img alt="graphical abstract" src="website/graphical_abstract.png" width="65%" class = "center">
+            <h3 class="text-center">
+                Datasets and Code to Evaluate Methods for Processing Transcriptomics Data
+            </h3>
+            <img alt="graphical abstract" src="website/workflowdiagram.png" width="65%" class = "center">
             <div class="row">
                 <div class="box" id="data">
                     <h5>
@@ -90,22 +93,13 @@
                     <img alt="gene expression analysis steps" src="website/steps.png" width="100%">
                     <ul id="notebooks">
                         <li>
-                            <a>Benchmarking Alignment Methods</a>
-                        </li>
-                        <li>
                             <a href="Benchmarking_Normalization_Methods/benchmarking_normalization.html">Benchmarking Data Normalization Methods (CD Version)</a>
                         </li>
                         <li>
                             <a href="Benchmarking_Normalization_Methods/benchmarking_normalization_v2.html">Benchmarking Data Normalization Methods (Limma Version)</a>
                         </li>
                         <li>
-                            <a>Benchmarking Clustering Methods</a>
-                        </li>
-                        <li>
-                            <a href="Benchmarking_RNA-seq_DEG_Methods/benchmarking_RNAseq_DEGs.html">Benchmarking RNA-seq DEG Methods</a>
-                        </li>
-                        <li>
-                            <a>Benchmarking Enrichment Analysis Methods</a>
+                            <a href="Benchmarking_Normalization_Methods/benchmarking_normalization_v3.html">Benchmarking Data Normalization Methods (Fold Change Version)</a>
                         </li>
                     </ul>
                 </div>
