Update index page links

--- a/index.html
+++ b/index.html
@@ -72,17 +72,46 @@
                         </li>
                     </ul>
                     <p>
-                        L1000
+                        L1000 Profiles
                     </p>
                     <ul>
                         <li>
-                            <a href="L1000_data/dex_L1000.csv">Dexamethasone Signatures</a> (File Download)
+                            <a href="L1000_data/Dexamethasone_L1000_ChemPert_data.tsv">Dexamethasone Perturbation Profiles</a> (File Download)
                         </li>
                         <li>
-                            <a href="L1000_data/nr3c1_OE.csv">NR3C1 Overexpression</a> (File Download)
+                            <a href="L1000_data/NR3C1_L1000_OE_data.tsv">NR3C1 Overexpression Profiles</a> (File Download)
                         </li>
                         <li>
-                            <a href="L1000_data/nr3c1_kd.csv">NR3C1 Knockdown</a> (File Download)
+                            <a href="L1000_data/NR3C1_L1000_shRNA_data.tsv">NR3C1 Knockdown Profiles</a> (File Download)
+                        </li>
+                        <li>
+                            <a href="L1000_data/NR0B1_L1000_OE_data.tsv">NR3C1 Overexpression Profiles</a> (File Download)
+                        </li>
+                        <li>
+                            <a href="L1000_data/NR0B1_L1000_shRNA_data.tsv">NR0B1 Knockdown Profiles</a> (File Download)
+                        </li>
+                        <li>
+                            <a href="L1000_data/NR0B1_L1000_CRISPRKO_data.tsv">NR0B1 CRISPR Knockout Profiles</a> (File Download)
+                        </li>
+                        <li>
+                            <a href="L1000_data/NR1I2_L1000_OE_data.tsv">NR1I2 Overexpression Profiles</a> (File Download)
+                        </li>
+                        <li>
+                            <a href="L1000_data/NR1I2_L1000_CRISPRKO_data.tsv">NR1I2 CRISPR Knockout Profiles</a> (File Download)
+                        </li>
+                    </ul>
+                    <p>
+                        L1000 Signatures
+                    </p>
+                    <ul>
+                        <li>
+                            <a href="L1000_data/dex_L1000.csv">Dexamethasone Perturbation Signatures</a> (File Download)
+                        </li>
+                        <li>
+                            <a href="L1000_data/nr3c1_kd.csv">NR3C1 Knockdown Signatures</a> (File Download)
+                        </li>
+                        <li>
+                            <a href="L1000_data/nr3c1_OE.csv">NR3C1 Overexpression Signatures</a> (File Download)
                         </li>
                     </ul>
                 </div>
