--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
             </div>
         </nav>
         <main class="py-4">
-            <h2 class="text-center">
+            <h1 class="text-center">
                 The Dexamethasone Benchmarking Resource
-            </h2>
-            <h3 class="text-center">
-                Datasets and Code to Evaluate Methods for Processing Transcriptomics Data
-            </h3>
+            </h1>
+            <p class="text-center" style="font-size:20pt">
+                <em>Datasets and Code to Evaluate Methods for Processing Transcriptomics Data</em>
+            </p>
             <img alt="graphical abstract" src="website/workflowdiagram.png" width="65%" class = "center">
             <div class="row">
                 <div class="box" id="data">
